--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,14 @@ FIND_PACKAGE(HDF5 REQUIRED)
 INCLUDE_DIRECTORIES(${HDF5_INCLUDE_DIR})
 LINK_DIRECTORIES(${HDF5_LIBRARY_DIRS})
 
+#IF(NOT HDF5_ENABLE_PARALLEL)
+	#MESSAGE(FATAL_ERROR "HDF5 library does not support parallel I/O")
+#ENDIF(NOT HDF5_ENABLE_PARALLEL)
+
+# MPI is required package
+FIND_PACKAGE(MPI REQUIRED)
+INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})
+
 # add includes and sources
 INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/src/include")
 AUX_SOURCE_DIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/src" LIBRARY_SOURCES)
@@ -42,12 +50,12 @@ AUX_SOURCE_DIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/tools" TOOLS_SOURCES)
 
 # build libsplash shared
 ADD_LIBRARY(splash SHARED ${LIBRARY_SOURCES})
-TARGET_LINK_LIBRARIES (splash z hdf5)
+TARGET_LINK_LIBRARIES (splash z hdf5 mpi mpi_cxx)
 
 #build libsplash static
 ADD_LIBRARY(splash_static STATIC ${LIBRARY_SOURCES})
 SET_TARGET_PROPERTIES(splash_static PROPERTIES OUTPUT_NAME splash)
-TARGET_LINK_LIBRARIES (splash_static z hdf5)
+TARGET_LINK_LIBRARIES (splash_static z hdf5 mpi mpi_cxx)
 
 # build tools
 OPTION(WITH_TOOLS "enable splashtools" ON)
@@ -64,8 +72,6 @@ IF(WITH_TOOLS)
     OPTION(TOOLS_MPI "enable splashtools MPI support" OFF)
     IF(TOOLS_MPI)
         ADD_DEFINITIONS(-DENABLE_MPI=1)
-        FIND_PACKAGE(MPI REQUIRED)
-        INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})
         SET(TOOLS_LIBS ${TOOLS_LIBS} ${MPI_LIBRARIES})
         MESSAGE("building tools MPI version")
     ENDIF(TOOLS_MPI)
