--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,10 +4,18 @@ cmake_minimum_required(VERSION 2.6)
 SET(CMAKE_BUILD_TYPE Debug)
 SET(CMAKE_CXX_FLAGS_DEBUG "-g")
 
+#-------------------------------------------------------------------------------
+
 # HDF5 is required package
 FIND_PACKAGE(HDF5 REQUIRED)
 INCLUDE_DIRECTORIES(${HDF5_INCLUDE_DIR})
 LINK_DIRECTORIES(${HDF5_LIBRARY_DIRS})
+
+# MPI is required package
+FIND_PACKAGE(MPI REQUIRED)
+INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})
+
+#-------------------------------------------------------------------------------
 
 OPTION(TESTS_DEBUG "enable debug output for tests" OFF)
 IF(TESTS_DEBUG)
@@ -16,23 +24,42 @@ ENDIF(TESTS_DEBUG)
 
 INCLUDE_DIRECTORIES(include ../src/include $ENV{MPI_INC} )
 
-FILE(GLOB SRCFILES "*.cpp")
-FILE(GLOB SRCFILESOTHER "dependencies/*.cpp")
+#-------------------------------------------------------------------------------
 
+FILE(GLOB SRCFILESOTHER "dependencies/*.cpp")
+SET(TESTS Append Attributes Benchmark MergedRead References Remove SimpleData Striding)
+
+OPTION(PARALLEL "enable tests for parallel libSplash" OFF)
+IF(PARALLEL)
+    SET(TESTS ${TESTS} Parallel_Attributes Parallel_References Parallel_Remove Parallel_SimpleData)
+ELSE(PARALLEL)
+    SET(TESTS ${TESTS} Domains)
+ENDIF(PARALLEL)
+
+FOREACH(TEST_NAME ${TESTS})
+    SET(TEST_FILES "${TEST_FILES};${TEST_NAME}Test.cpp")
+ENDFOREACH()
+
+#-------------------------------------------------------------------------------
+
+SET(SPLASH_RELEASE CACHE BOOL OFF)
+SET(WITH_TOOLS CACHE BOOL OFF)
 ADD_SUBDIRECTORY(.. "${CMAKE_CURRENT_BINARY_DIR}/build_libsplash")
 
-FOREACH(SRCFILE ${SRCFILES})
-    GET_FILENAME_COMPONENT(FILE ${SRCFILE} NAME)
+#-------------------------------------------------------------------------------
+
+FOREACH(TEST_FILE ${TEST_FILES})
+    GET_FILENAME_COMPONENT(FILE ${TEST_FILE} NAME)
     MESSAGE(${FILE})
     ADD_EXECUTABLE(${FILE}.out
-        ${SRCFILE}
+        ${TEST_FILE}
         ${SRCFILESOTHER}
     )
 
     IF(${vampir})
-        TARGET_LINK_LIBRARIES(${FILE}.out vt-hyb splash m cppunit mpi mpi_cxx hdf5)
+        TARGET_LINK_LIBRARIES(${FILE}.out vt-hyb splash m cppunit ${MPI_LIBRARIES} hdf5)
     ELSE()
-        TARGET_LINK_LIBRARIES(${FILE}.out splash m cppunit mpi mpi_cxx hdf5)
+        TARGET_LINK_LIBRARIES(${FILE}.out splash m cppunit ${MPI_LIBRARIES} hdf5)
     ENDIF()
 ENDFOREACH()
 
