--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ IF(NOT SPLASH_RELEASE)
 
     IF(DEBUG_VERBOSE)
         ADD_DEFINITIONS(-DSDC_DEBUG_OUTPUT)
+        ADD_DEFINITIONS(-DDC_DEBUG=1)
     ENDIF(DEBUG_VERBOSE)
 
     MESSAGE("building debug version")
