Added deep-groups support
 - added support for deep group names
 - added --list option in splashtools
 - added parallel file support in splashtools
 - added tests for deep group names in existing tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,7 +65,7 @@ ENDIF(NOT SPLASH_RELEASE)
 SET(SPLASH_LIBS z ${HDF5_LIBRARIES})
 
 # serial or parallel version of libSplash
-SET(SPLASH_CLASSES DCAttribute DCDataSet HandleMgr SerialDataCollector DomainCollector)
+SET(SPLASH_CLASSES DCAttribute DCDataSet DCGroup HandleMgr SerialDataCollector DomainCollector)
 OPTION(PARALLEL "enable parallel MPI I/O" OFF)
 IF(PARALLEL)
     #parallel version 
