Make tests use master include file
 - tests should only include splash.h
 - updated both cmakelists.txt files to allow tests to use splash.h

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -57,6 +57,7 @@ ENDFOREACH()
 SET(SPLASH_RELEASE CACHE BOOL OFF)
 SET(WITH_TOOLS CACHE BOOL OFF)
 ADD_SUBDIRECTORY(.. "${CMAKE_CURRENT_BINARY_DIR}/build_libsplash")
+INCLUDE_DIRECTORIES("${CMAKE_CURRENT_BINARY_DIR}/build_libsplash")
 
 #-------------------------------------------------------------------------------
 
