CMakeLists: Auto-Parallel
- libSplash and tests detect automatically, if a parallel build is possible
- MESSAGE's use the flag STATUS now. That avoids blowing up the ccmake
  GUI while editing flags
- travis: less flags required

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,13 +16,13 @@ env:
 script:
   - cd $BUILD
 # compile libSplash and install
-  - cmake -DPARALLEL=$SPLASHPARALLEL -DTOOLS_MPI=$SPLASHMPI -DCMAKE_INSTALL_PREFIX=~/lib/splash $SRC
+  - cmake -DTOOLS_MPI=$SPLASHMPI -DCMAKE_INSTALL_PREFIX=~/lib/splash $SRC
   - make install
 # compile examples/
   - for e in `ls -d $SRC/examples/*`; do echo $e && ls $e && rm -rf $BUILD/* && cmake -DWITH_MPI=$SPLASHMPI $e && make; done
   - rm -rf $BUILD/*
 # compile and run tests/
-  - cmake -DPARALLEL=$SPLASHPARALLEL -DWITH_MPI=$SPLASHMPI $SRC/tests
+  - cmake -DWITH_MPI=$SPLASHMPI $SRC/tests
   - make
 
 after_script:
