--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -41,7 +41,7 @@ IF(WITH_MPI)
     SET(TESTS ${TESTS} Benchmark Domains MergedRead)
 ENDIF(WITH_MPI)
 
-OPTION(PARALLEL "enable tests for parallel libSplash" OFF)
+OPTION(PARALLEL "enable tests for parallel libSplash" @HDF5_IS_PARALLEL@)
 IF(PARALLEL)
     SET(TESTS ${TESTS} Parallel_Attributes Parallel_Domains Parallel_References Parallel_Remove Parallel_SimpleData)
 ELSE(PARALLEL)
@@ -63,7 +63,7 @@ INCLUDE_DIRECTORIES("${CMAKE_CURRENT_BINARY_DIR}/build_libsplash")
 
 FOREACH(TEST_FILE ${TEST_FILES})
     GET_FILENAME_COMPONENT(FILE ${TEST_FILE} NAME)
-    MESSAGE(${FILE})
+    MESSAGE(STATUS ${FILE})
     ADD_EXECUTABLE(${FILE}.out
         ${TEST_FILE}
         ${SRCFILESOTHER}
