Change prefix path
- FindHDF5.cmake: honors the ENV variable HDF5_ROOT -> removed from Prefix
- 64bit Ubuntu: if one uses self-compiled compilers and someone forgot to set
                the multiarch lib dir /usr/lib/x86_64-linux-gnu/ in the
                default compiler path we have to manually add this...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,9 @@ cmake_minimum_required(VERSION 2.8.5)
 project (libSplash)
 
 #set helper pathes to find libraries and packages
-set(CMAKE_PREFIX_PATH "$ENV{MPI_ROOT}" "$ENV{HDF5_ROOT}")
+#- you need the multiarch dir x86_64-linux-gnu on 64bit Ubuntu's with
+#  self-compiled compilers
+set(CMAKE_PREFIX_PATH "/usr/lib/x86_64-linux-gnu/" "$ENV{MPI_ROOT}")
 
 #-------------------------------------------------------------------------------
 
