--- a/examples/domain_read/CMakeLists.txt
+++ b/examples/domain_read/CMakeLists.txt
@@ -21,7 +21,7 @@
 cmake_minimum_required(VERSION 2.8.5)
 
 project (domain_read)
-set(CMAKE_PREFIX_PATH "/usr/lib/x86_64-linux-gnu/" "$ENV{HDF5_ROOT}")
+set(CMAKE_PREFIX_PATH "/usr/lib/x86_64-linux-gnu/" "$ENV{MPI_ROOT}")
 
 SET(CMAKE_CXX_FLAGS_DEBUG "-g")
 SET(CMAKE_BUILD_TYPE Debug)
