--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,8 +80,8 @@ IF(HDF5_IS_PARALLEL)
 
     # MPI is required package
     FIND_PACKAGE(MPI REQUIRED)
-    INCLUDE_DIRECTORIES(SYSTEM ${MPI_INCLUDE_PATH})
-    SET(SPLASH_LIBS ${SPLASH_LIBS} ${MPI_LIBRARIES})
+    INCLUDE_DIRECTORIES(SYSTEM ${MPI_C_INCLUDE_PATH} ${MPI_CXX_INCLUDE_PATH})
+    SET(SPLASH_LIBS ${SPLASH_LIBS} ${MPI_C_LIBRARIES} ${MPI_CXX_LIBRARIES})
 
     SET(SPLASH_CLASSES ${SPLASH_CLASSES} ParallelDataCollector ParallelDomainCollector)
 ELSE(HDF5_IS_PARALLEL)
@@ -161,15 +161,15 @@ IF(WITH_TOOLS)
         IF(NOT HDF5_IS_PARALLEL)
             # MPI is required package but not yet included
             FIND_PACKAGE(MPI REQUIRED)
-            INCLUDE_DIRECTORIES(SYSTEM ${MPI_INCLUDE_PATH})
+            INCLUDE_DIRECTORIES(SYSTEM ${MPI_C_INCLUDE_PATH} ${MPI_CXX_INCLUDE_PATH})
         ENDIF(NOT HDF5_IS_PARALLEL)
 
         ADD_DEFINITIONS(-DENABLE_MPI=1)
-        SET(TOOLS_LIBS ${TOOLS_LIBS} ${MPI_LIBRARIES})
+        SET(TOOLS_LIBS ${TOOLS_LIBS} ${MPI_C_LIBRARIES} ${MPI_CXX_LIBRARIES})
         MESSAGE(STATUS "Building splashtools MPI version")
     ELSE(TOOLS_MPI)
         IF(HDF5_IS_PARALLEL)
-            SET(TOOLS_LIBS ${TOOLS_LIBS} ${MPI_LIBRARIES})
+            SET(TOOLS_LIBS ${TOOLS_LIBS} ${MPI_C_LIBRARIES} ${MPI_CXX_LIBRARIES})
         ENDIF(HDF5_IS_PARALLEL)
     ENDIF(TOOLS_MPI)
 
