Re-Introduce "$ENV{HDF5_ROOT}" in CMAKE_PREFIX
- adding HDF5_ROOT to CMAKE_PREFIX allows to PREFER the installation in
  HDF5_ROOT over system installations

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Projekt name
 cmake_minimum_required(VERSION 2.8.5)
 
-set(CMAKE_PREFIX_PATH "/usr/lib/x86_64-linux-gnu/" "$ENV{MPI_ROOT}")
+set(CMAKE_PREFIX_PATH "/usr/lib/x86_64-linux-gnu/" "$ENV{MPI_ROOT}" "$ENV{HDF5_ROOT}")
 
 SET(CMAKE_BUILD_TYPE Debug)
 SET(CMAKE_CXX_FLAGS_DEBUG "-g")
