--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,6 +101,21 @@ AUX_SOURCE_DIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/tools" TOOLS_SOURCES)
 
 #-------------------------------------------------------------------------------
 
+IF(VAMPIR_ENABLE)
+    MESSAGE("Building program with VampirTrace support")
+    SET(CMAKE_CXX_COMPILER "vtc++")
+    SET(CMAKE_CXX_LINK_FLAGS "${CMAKE_CXX_LINK_FLAGS} -vt:hyb -L/$ENV{VT_ROOT}/lib 
+        -finstrument-functions-exclude-file-list=${CMAKE_CXX_INST_FILE_FILTER}
+        -finstrument-functions-exclude-function-list=${CMAKE_CXX_INST_FUNC_FILTER}
+        -DVTRACE")
+    SET(CMAKE_CXX_FLAGS_DEFAULT "${CMAKE_CXX_FLAGS_DEFAULT} -vt:hyb -L/$ENV{VT_ROOT}/lib
+        -finstrument-functions-exclude-file-list=${CMAKE_CXX_INST_FILE_FILTER}
+        -finstrument-functions-exclude-function-list=${CMAKE_CXX_INST_FUNC_FILTER}
+        -DVTRACE")
+ENDIF(VAMPIR_ENABLE)
+
+#-------------------------------------------------------------------------------
+
 # build libsplash shared
 ADD_LIBRARY(splash SHARED ${LIBRARY_SOURCES})
 TARGET_LINK_LIBRARIES (splash ${SPLASH_LIBS})
