--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,7 +1,32 @@
-# Projekt name
+ #
+ # Copyright 2013 Felix Schmitt
+ #
+ # This file is part of libSplash. 
+ # 
+ # libSplash is free software: you can redistribute it and/or modify 
+ # it under the terms of of either the GNU General Public License or 
+ # the GNU Lesser General Public License as published by 
+ # the Free Software Foundation, either version 3 of the License, or 
+ # (at your option) any later version. 
+ # libSplash is distributed in the hope that it will be useful, 
+ # but WITHOUT ANY WARRANTY; without even the implied warranty of 
+ # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the 
+ # GNU General Public License and the GNU Lesser General Public License 
+ # for more details. 
+ # 
+ # You should have received a copy of the GNU General Public License 
+ # and the GNU Lesser General Public License along with libSplash. 
+ # If not, see <http://www.gnu.org/licenses/>.
+
 cmake_minimum_required(VERSION 2.8.5)
 
-set(CMAKE_PREFIX_PATH "/usr/lib/x86_64-linux-gnu/" "$ENV{MPI_ROOT}" "$ENV{HDF5_ROOT}")
+#-------------------------------------------------------------------------------
+
+PROJECT(splash-tests)
+
+#-------------------------------------------------------------------------------
+
+SET(CMAKE_PREFIX_PATH "/usr/lib/x86_64-linux-gnu/" "$ENV{MPI_ROOT}" "$ENV{HDF5_ROOT}")
 
 SET(CMAKE_BUILD_TYPE Debug)
 SET(CMAKE_CXX_FLAGS_DEBUG "-g")
