--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -63,7 +63,7 @@ FILE(GLOB SRCFILESOTHER "dependencies/*.cpp")
 SET(TESTS Append Attributes FileAccess References Remove SimpleData Striding)
 
 IF(WITH_MPI)
-    SET(TESTS ${TESTS} Benchmark Domains MergedRead)
+    SET(TESTS ${TESTS} Benchmark Domains)
 ENDIF(WITH_MPI)
 
 OPTION(PARALLEL "enable tests for parallel libSplash" @HDF5_IS_PARALLEL@)
